--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>  
 <h2>Spill the Tea in Ba Sing Se</h2> 
 <p>Where even Dragons need a breather when traveling down the biggest city in the World!
-Get a good look as we&#8217;re located in the Upper Ring where only the best of the best teas are present.</p> 
+Get a good look! We&#8217;re located in the Upper Ring where only the best of the best teas are available.</p> 
 <p>Indulge with a friend or family where the infamous "Dragon of The West" resides in to burn your socks off
 with the delicacy of his shop The Jasmine Dragon!</p>
 <h3>The Jasmine Dragon features:</h3> 
