--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body> 
 <div id="wrapper">
 <header>
-<h1><a href="index.html">The Jasmine Dragon</a></h1>  
+<h1>The Jasmine Dragon</h1>  
 </header>  
 <nav>  
 <ul>  
