--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <ul>  
 <li><a href="index.html">Home</a></li>  
 <li><a href="menu.html">Menu</a></li>    
-<li><a href="history.html">Music</a></li>      
+<li><a href="history.html">History</a></li>      
 </ul>
 </nav> 
 <main>  
