--- a/history.html
+++ b/history.html
@@ -13,8 +13,8 @@
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>  
-<li><a href="menu.html">Menu</a></li>    
-<li><a href="history.html">History</a>   
+<li><a href="history.html">History</a></li>    
+<li><a href="other.html">Other</a>   
 </li>    
 </ul>
 </nav> 
