--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <nav>  
 <ul>  
 <li><a href="index.html">Home</a></li>     
-<li><a href="history.html">History</a></li>      
+<li><a href="history.html">History</a></li> 
+<li><a href="other.html">Other</a>
 </ul>
 </nav> 
 <main>  
