--- a/history.html
+++ b/history.html
@@ -1,42 +1,37 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
-<title>The Jasmine Dragon Menu</title>
+<title>The Jasmine Dragon</title>
 <meta charset="utf-8">
 <link href="jasminedragon.css" rel="stylesheet">
 </head>
-<body>
+<body> 
 <div id="wrapper">
 <header>
-<h1><a href="index.html">The Jasmine Dragon</a></h1>
-</header>
-<nav>
-<ul>
+<h1><a href="index.html">The Jasmine Dragon</a></h1>  
+</header>  
+<nav>  
+<ul>  
 <li><a href="index.html">Home</a></li>  
 <li><a href="history.html">History</a></li>    
-<li><a href="other.html">Other</a>   
-</li>    
-</ul>
+<li><a href="other.html">Other</a>  </ul>
 </nav> 
 <main>  
-<div id="heromugs">  
+<div id="heroguitar">  
 </div>  
-<h2>Coffee at JavaJam</h2>  
-<p>Indulge in our locally roasted free-trade coffee and enjoy the aroma, the smooth taste,  
-the caffeine! Join our Mug Club and get a 10% discount on each cup of coffee you
-purchase &mdash; ask the barista for details.</p>  
-<section class="onethird">
-<h3>Just Java</h3>  
-<p>Regular house blend, decaffeinated coffee, or flavor of the day.<br>Endless Cup $3.50</p> 
-</section>
-<section class="onethird">
-<h3>Cafe au Lait</h3>
-<p>House blended cofee infused into a smooth, steamed milk.<br>Single $4.00 Double $5.00</p>
-</section>  
-<section class="onethird">
-<h3>Iced Cappuccino</h3>
-<p>Sweetened espresso blended with icy-cold milk and served in a chilled glass.<br>Single $5.00 Double $6.50</p>
-</section>
+<h4>Before The Jasmine Dragon</h4> 
+<p>The first Friday night each month at JavaJam is a special night. Join us from 8pm to 
+ 11pm for some music you won't want to miss</p>
+<h4>Founders</h4>
+  <div class="details">
+<a href="melanie.jpg"><img src="melaniethumb.jpg" class="floatleft" alt="Melanie" width="100" height="100"></a>
+Melanie Morris entertains with her melodic folk style.
+</div>
+<h4>How it Started</h4>   
+<div class="details">  
+<a href="greg.jpg"><img src="gregthumb.jpg" class="floatleft" alt="Tahoe Greg" width="100" height="100"></a>  
+Tahoe Greg is back from his tour. New songs. New stories.   
+</div>  
 </main>
 <footer>
 Copyright &copy; 2020 JavaJam Coffee Bar<br>  
@@ -44,4 +39,4 @@ Copyright &copy; 2020 JavaJam Coffee Bar<br>
 </footer>  
 </div>
 </body>
-</html>   
+</html>
