--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
 <h4>Before The Jasmine Dragon</h4> 
 <p>The first Friday night each month at JavaJam is a special night. Join us from 8pm to 
  11pm for some music you won't want to miss</p>
-<h4>Founders</h4>
+<h4>About the Founder</h4>
   <div class="details">
 <a href="zukoiroh.jpg"><img src="zukoiroh2.jpg" class="floatleft" alt="ZukoIroh" width="100" height="100"></a>
 Melanie Morris entertains with her melodic folk style.
