--- a/history.html
+++ b/history.html
@@ -29,7 +29,7 @@ Melanie Morris entertains with her melodic folk style.
 </div>
 <h4>How it Started</h4>   
 <div class="details">  
-<a href="greg.jpg"><img src="gregthumb.jpg" class="floatleft" alt="Tahoe Greg" width="100" height="100"></a>  
+<a href="tea.jpg"><img src="tea.jpg" class="floatleft" alt="Tahoe Greg" width="100" height="100"></a>  
 Tahoe Greg is back from his tour. New songs. New stories.   
 </div>  
 </main>
