--- a/history.html
+++ b/history.html
@@ -24,7 +24,7 @@
  11pm for some music you won't want to miss</p>
 <h4>About the Founder</h4>
   <div class="details">
-<a href="zukoiroh.jpg"><img src="zukoiroh.jpg" class="floatleft" alt="ZukoIroh" width="100" height="100"></a>
+<a href="iroh.jpg"><img src="iroh.jpg" class="floatleft" alt="Iroh" width="100" height="100"></a>
 Melanie Morris entertains with her melodic folk style.
 </div>
 <h4>How it Started</h4>   
