--- a/history.html
+++ b/history.html
@@ -1,40 +1,42 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<title>The Jasmine Dragon</title>
+<title></title>
 <meta charset="utf-8">
 <link href="jasminedragon.css" rel="stylesheet">
 </head>
-<body> 
+<body>
 <div id="wrapper">
 <header>
-<h1><a href="index.html">The Jasmine Dragon</a></h1>  
-</header>  
-<nav>  
-<ul>  
+<h1><a href="index.html">The Jasmine Dragon</a></h1>
+</header>
+<nav>
+<ul>
 <li><a href="index.html">Home</a></li>  
-<li><a href="history.html">History</a></li>    
-<li><a href="other.html">Other</a>  </ul>
+<li><a href="menu.html">History</a></li>    
+<li><a href="music.html">Other</a></li>    
+</ul>
 </nav> 
 <main>  
-<div id="heroguitar">  
+<div id="bss">  
 </div>  
-<h4>Before The Jasmine Dragon</h4> 
-<p>The first Friday night each month at JavaJam is a special night. Join us from 8pm to 
- 11pm for some music you won't want to miss</p>
-<h4>About the Founder</h4>
-  <div class="details">
-<a href="iroh.jpg"><img src="iroh.jpg" class="floatleft" alt="Iroh" width="100" height="100"></a>
-Melanie Morris entertains with her melodic folk style.
-</div>
-<h4>How it Started</h4>   
-<div class="details">  
-<a href="tea2.jpg"><img src="tea2.jpg" class="floatleft" alt="Tahoe Greg" width="100" height="100"></a>  
-Tahoe Greg is back from his tour. New songs. New stories.   
-</div>  
+<h2>Before the Jasmine Dragon</h2>  
+<p>Years before founding The Jasmine Dragon, Iroh was the Crown Prince of the Fire Nation. However, he retired his military affairs and the throne was then passed on to his youngest brother, Ozai. Iroh, trying to find a new path and accomdate his hobby and love for tea worked for another. Stranded in Ba Sing Se and forced to make a living, he was offered a job at another tea shop, this didn't last long as he was offered to open up his own tea shop and then The Jasmine Dragon came to be.</p>  
+<section class="onethird">
+<h3>About the Founder</h3>  
+<p>After the loss of his son, Iroh retired military affairs, and accepted Ozai as the new Fire Lord of The Fire Nation. Nicknamed "The Dragon of the West" due to him slaying the last two dragons, but also for his ability to breathe fire.</p> 
+</section>
+<section class="onethird">
+<h3>Co-Founder</h3>
+<p>Banshined prince Zuko, is the first-born son of Firelord Ozai. Sent out to kill the Avatar in order to be un-banished, he instead became good friends with Avatar Aang, and is now the new Firelord of the Fire Nation. Always seen with his beloved uncle Iroh.</p>
+</section>  
+<section class="onethird">
+<h3>Re-claiming</h3>
+<p>Following the defeat of Firelord Ozai, and essentially ending the One Hundred Year War. Iroh after leaving The Jasmine Dragon came back to open up and re-claim the tea shop after a newfound peace in himself and the world.</p>
+</section>
 </main>
 <footer>
-Copyright &copy; 2020 JavaJam Coffee Bar<br>  
+Copyright &copy; 2020 The Jasmine Dragon<br>  
 <a href="mailto:yourfirstname@yourlastname.com">yourfirstname@yourlastname.com</a>
 </footer>  
 </div>
