--- a/history.html
+++ b/history.html
@@ -18,7 +18,7 @@
 </ul>
 </nav> 
 <main>  
-<div id="bss.jpg">  
+<div id="heroguitar">  
 </div>  
 <h2>Before the Jasmine Dragon</h2>  
 <p>Years before founding The Jasmine Dragon, Iroh was the Crown Prince of the Fire Nation. However, he retired his military affairs and the throne was then passed on to his youngest brother, Ozai. Iroh, trying to find a new path and accomdate his hobby and love for tea worked for another. Stranded in Ba Sing Se and forced to make a living, he was offered a job at another tea shop, this didn't last long as he was offered to open up his own tea shop and then The Jasmine Dragon came to be.</p>  
